--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^14.13.0",
     "@discordjs/rest": "^2.0.0",
-    "discord-api-types": "^0.37.50"
+    "discord-api-types": "^0.37.50",
+    "discord.js": "^14.13.0",
+    "dotenv": "^16.4.7"
   }
 }
